cuqui/inquir/generated/InQuIRParser.cpp

// Generated from InQuIRParser.g4 by ANTLR 4.13.1


#include "InQuIRParserListener.h"

#include "InQuIRParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct InQuIRParserStaticData final {
  InQuIRParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  InQuIRParserStaticData(const InQuIRParserStaticData&) = delete;
  InQuIRParserStaticData(InQuIRParserStaticData&&) = delete;
  InQuIRParserStaticData& operator=(const InQuIRParserStaticData&) = delete;
  InQuIRParserStaticData& operator=(InQuIRParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag inquirparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
InQuIRParserStaticData *inquirparserParserStaticData = nullptr;

void inquirparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (inquirparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(inquirparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<InQuIRParserStaticData>(
    std::vector<std::string>{
      "mainprogram", "system", "process", "instruction", "function", "quantum_instruction", 
      "expression", "value", "gate", "session", "participant", "label", 
      "qubit"
    },
    std::vector<std::string>{
      "", "'open'", "'close'", "'init'", "'free'", "", "'genEnt'", "'entSwap'", 
      "'recv'", "'send'", "'rcxc'", "'rcxt'", "'H'", "'X'", "'Y'", "'Z'", 
      "'CX'", "'CZ'", "'SWAP'", "", "", "", "", "'&&'", "'||'", "'^'", "'if'", 
      "'else'", "'then'", "'{'", "'}'", "'('", "')'", "'['", "']'", "','", 
      "':'", "';'", "'.'", "'|'", "'='", "'!'", "'\\u003F'"
    },
    std::vector<std::string>{
      "", "OPEN", "CLOSE", "INIT", "FREE", "MEASURE", "GENENT", "ENTSWAP", 
      "RECV", "SEND", "RCXC", "RCXT", "H", "X", "Y", "Z", "CX", "CZ", "SWAP", 
      "ID", "REAL", "INT", "STRING", "AND", "OR", "XOR", "IF", "ELSE", "THEN", 
      "LCURLY", "RCURLY", "LPAREN", "RPAREN", "LBRACK", "RBRACK", "COMMA", 
      "COLON", "SEMICOLON", "DOT", "VERT", "EQUAL", "EXCLAM", "QUESTION", 
      "WS", "EOL"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  inquirparserParserStaticData = staticData.release();
}

}

InQuIRParser::InQuIRParser(TokenStream *input) : InQuIRParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

InQuIRParser::InQuIRParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  InQuIRParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *inquirparserParserStaticData->atn, inquirparserParserStaticData->decisionToDFA, inquirparserParserStaticData->sharedContextCache, options);
}

InQuIRParser::~InQuIRParser() {
  delete _interpreter;
}

const atn::ATN& InQuIRParser::getATN() const {
  return *inquirparserParserStaticData->atn;
}

std::string InQuIRParser::getGrammarFileName() const {
  return "InQuIRParser.g4";
}

const std::vector<std::string>& InQuIRParser::getRuleNames() const {
  return inquirparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& InQuIRParser::getVocabulary() const {
  return inquirparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView InQuIRParser::getSerializedATN() const {
  return inquirparserParserStaticData->serializedATN;
}


//----------------- MainprogramContext ------------------------------------------------------------------

InQuIRParser::MainprogramContext::MainprogramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

InQuIRParser::SystemContext* InQuIRParser::MainprogramContext::system() {
  return getRuleContext<InQuIRParser::SystemContext>(0);
}


size_t InQuIRParser::MainprogramContext::getRuleIndex() const {
  return InQuIRParser::RuleMainprogram;
}

void InQuIRParser::MainprogramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<InQuIRParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMainprogram(this);
}

void InQuIRParser::MainprogramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<InQuIRParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMainprogram(this);
}

InQuIRParser::MainprogramContext* InQuIRParser::mainprogram() {
  MainprogramContext *_localctx = _tracker.createInstance<MainprogramContext>(_ctx, getState());
  enterRule(_localctx, 0, InQuIRParser::RuleMainprogram);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(26);
    system();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SystemContext ------------------------------------------------------------------

InQuIRParser::SystemContext::SystemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* InQuIRParser::SystemContext::EOF() {
  return getToken(InQuIRParser::EOF, 0);
}

std::vector<InQuIRParser::ProcessContext *> InQuIRParser::SystemContext::process() {
  return getRuleContexts<InQuIRParser::ProcessContext>();
}

InQuIRParser::ProcessContext* InQuIRParser::SystemContext::process(size_t i) {
  return getRuleContext<InQuIRParser::ProcessContext>(i);
}

tree::TerminalNode* InQuIRParser::SystemContext::LPAREN() {
  return getToken(InQuIRParser::LPAREN, 0);
}

std::vector<InQuIRParser::SystemContext *> InQuIRParser::SystemContext::system() {
  return getRuleContexts<InQuIRParser::SystemContext>();
}

InQuIRParser::SystemContext* InQuIRParser::SystemContext::system(size_t i) {
  return getRuleContext<InQuIRParser::SystemContext>(i);
}

tree::TerminalNode* InQuIRParser::SystemContext::VERT() {
  return getToken(InQuIRParser::VERT, 0);
}

tree::TerminalNode* InQuIRParser::SystemContext::RPAREN() {
  return getToken(InQuIRParser::RPAREN, 0);
}


size_t InQuIRParser::SystemContext::getRuleIndex() const {
  return InQuIRParser::RuleSystem;
}

void InQuIRParser::SystemContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<InQuIRParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSystem(this);
}

void InQuIRParser::SystemContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<InQuIRParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSystem(this);
}

InQuIRParser::SystemContext* InQuIRParser::system() {
  SystemContext *_localctx = _tracker.createInstance<SystemContext>(_ctx, getState());
  enterRule(_localctx, 2, InQuIRParser::RuleSystem);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(42);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case InQuIRParser::EOF:
      case InQuIRParser::INT: {
        enterOuterAlt(_localctx, 1);
        setState(31);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == InQuIRParser::INT) {
          setState(28);
          process();
          setState(33);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(34);
        match(InQuIRParser::EOF);
        break;
      }

      case InQuIRParser::LPAREN: {
        enterOuterAlt(_localctx, 2);
        setState(35);
        match(InQuIRParser::LPAREN);
        setState(36);
        system();
        setState(37);
        match(InQuIRParser::VERT);
        setState(38);
        system();
        setState(39);
        match(InQuIRParser::RPAREN);
        setState(40);
        match(InQuIRParser::EOF);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProcessContext ------------------------------------------------------------------

InQuIRParser::ProcessContext::ProcessContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

InQuIRParser::ParticipantContext* InQuIRParser::ProcessContext::participant() {
  return getRuleContext<InQuIRParser::ParticipantContext>(0);
}

tree::TerminalNode* InQuIRParser::ProcessContext::LCURLY() {
  return getToken(InQuIRParser::LCURLY, 0);
}

tree::TerminalNode* InQuIRParser::ProcessContext::RCURLY() {
  return getToken(InQuIRParser::RCURLY, 0);
}

std::vector<InQuIRParser::InstructionContext *> InQuIRParser::ProcessContext::instruction() {
  return getRuleContexts<InQuIRParser::InstructionContext>();
}

InQuIRParser::InstructionContext* InQuIRParser::ProcessContext::instruction(size_t i) {
  return getRuleContext<InQuIRParser::InstructionContext>(i);
}


size_t InQuIRParser::ProcessContext::getRuleIndex() const {
  return InQuIRParser::RuleProcess;
}

void InQuIRParser::ProcessContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<InQuIRParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProcess(this);
}

void InQuIRParser::ProcessContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<InQuIRParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProcess(this);
}

InQuIRParser::ProcessContext* InQuIRParser::process() {
  ProcessContext *_localctx = _tracker.createInstance<ProcessContext>(_ctx, getState());
  enterRule(_localctx, 4, InQuIRParser::RuleProcess);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(44);
    participant();
    setState(45);
    match(InQuIRParser::LCURLY);
    setState(49);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 2217738004) != 0)) {
      setState(46);
      instruction();
      setState(51);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(52);
    match(InQuIRParser::RCURLY);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InstructionContext ------------------------------------------------------------------

InQuIRParser::InstructionContext::InstructionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

InQuIRParser::FunctionContext* InQuIRParser::InstructionContext::function() {
  return getRuleContext<InQuIRParser::FunctionContext>(0);
}

tree::TerminalNode* InQuIRParser::InstructionContext::SEMICOLON() {
  return getToken(InQuIRParser::SEMICOLON, 0);
}

InQuIRParser::ValueContext* InQuIRParser::InstructionContext::value() {
  return getRuleContext<InQuIRParser::ValueContext>(0);
}

tree::TerminalNode* InQuIRParser::InstructionContext::EQUAL() {
  return getToken(InQuIRParser::EQUAL, 0);
}

InQuIRParser::ExpressionContext* InQuIRParser::InstructionContext::expression() {
  return getRuleContext<InQuIRParser::ExpressionContext>(0);
}

InQuIRParser::Quantum_instructionContext* InQuIRParser::InstructionContext::quantum_instruction() {
  return getRuleContext<InQuIRParser::Quantum_instructionContext>(0);
}

tree::TerminalNode* InQuIRParser::InstructionContext::IF() {
  return getToken(InQuIRParser::IF, 0);
}

tree::TerminalNode* InQuIRParser::InstructionContext::THEN() {
  return getToken(InQuIRParser::THEN, 0);
}

std::vector<InQuIRParser::ProcessContext *> InQuIRParser::InstructionContext::process() {
  return getRuleContexts<InQuIRParser::ProcessContext>();
}

InQuIRParser::ProcessContext* InQuIRParser::InstructionContext::process(size_t i) {
  return getRuleContext<InQuIRParser::ProcessContext>(i);
}

tree::TerminalNode* InQuIRParser::InstructionContext::ELSE() {
  return getToken(InQuIRParser::ELSE, 0);
}

InQuIRParser::SessionContext* InQuIRParser::InstructionContext::session() {
  return getRuleContext<InQuIRParser::SessionContext>(0);
}

tree::TerminalNode* InQuIRParser::InstructionContext::LBRACK() {
  return getToken(InQuIRParser::LBRACK, 0);
}

tree::TerminalNode* InQuIRParser::InstructionContext::RBRACK() {
  return getToken(InQuIRParser::RBRACK, 0);
}

tree::TerminalNode* InQuIRParser::InstructionContext::EXCLAM() {
  return getToken(InQuIRParser::EXCLAM, 0);
}

tree::TerminalNode* InQuIRParser::InstructionContext::LPAREN() {
  return getToken(InQuIRParser::LPAREN, 0);
}

InQuIRParser::LabelContext* InQuIRParser::InstructionContext::label() {
  return getRuleContext<InQuIRParser::LabelContext>(0);
}

tree::TerminalNode* InQuIRParser::InstructionContext::COLON() {
  return getToken(InQuIRParser::COLON, 0);
}

tree::TerminalNode* InQuIRParser::InstructionContext::RPAREN() {
  return getToken(InQuIRParser::RPAREN, 0);
}

tree::TerminalNode* InQuIRParser::InstructionContext::QUESTION() {
  return getToken(InQuIRParser::QUESTION, 0);
}


size_t InQuIRParser::InstructionContext::getRuleIndex() const {
  return InQuIRParser::RuleInstruction;
}

void InQuIRParser::InstructionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<InQuIRParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInstruction(this);
}

void InQuIRParser::InstructionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<InQuIRParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInstruction(this);
}

InQuIRParser::InstructionContext* InQuIRParser::instruction() {
  InstructionContext *_localctx = _tracker.createInstance<InstructionContext>(_ctx, getState());
  enterRule(_localctx, 6, InQuIRParser::RuleInstruction);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(93);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(54);
      function();
      setState(55);
      match(InQuIRParser::SEMICOLON);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(57);
      value();
      setState(58);
      match(InQuIRParser::EQUAL);
      setState(59);
      expression(0);
      setState(60);
      match(InQuIRParser::SEMICOLON);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(62);
      quantum_instruction();
      setState(63);
      match(InQuIRParser::SEMICOLON);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(65);
      match(InQuIRParser::IF);
      setState(66);
      expression(0);
      setState(67);
      match(InQuIRParser::THEN);
      setState(68);
      process();
      setState(69);
      match(InQuIRParser::ELSE);
      setState(70);
      process();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(72);
      session();
      setState(73);
      match(InQuIRParser::LBRACK);
      setState(74);
      process();
      setState(75);
      match(InQuIRParser::RBRACK);
      setState(76);
      match(InQuIRParser::EXCLAM);
      setState(77);
      match(InQuIRParser::LPAREN);
      setState(78);
      label();
      setState(79);
      match(InQuIRParser::COLON);
      setState(80);
      expression(0);
      setState(81);
      match(InQuIRParser::RPAREN);
      setState(82);
      match(InQuIRParser::SEMICOLON);
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(84);
      session();
      setState(85);
      match(InQuIRParser::QUESTION);
      setState(86);
      match(InQuIRParser::LPAREN);
      setState(87);
      label();
      setState(88);
      match(InQuIRParser::COLON);
      setState(89);
      expression(0);
      setState(90);
      match(InQuIRParser::RPAREN);
      setState(91);
      match(InQuIRParser::SEMICOLON);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionContext ------------------------------------------------------------------

InQuIRParser::FunctionContext::FunctionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

InQuIRParser::SessionContext* InQuIRParser::FunctionContext::session() {
  return getRuleContext<InQuIRParser::SessionContext>(0);
}

tree::TerminalNode* InQuIRParser::FunctionContext::EQUAL() {
  return getToken(InQuIRParser::EQUAL, 0);
}

tree::TerminalNode* InQuIRParser::FunctionContext::OPEN() {
  return getToken(InQuIRParser::OPEN, 0);
}

tree::TerminalNode* InQuIRParser::FunctionContext::LBRACK() {
  return getToken(InQuIRParser::LBRACK, 0);
}

std::vector<InQuIRParser::ParticipantContext *> InQuIRParser::FunctionContext::participant() {
  return getRuleContexts<InQuIRParser::ParticipantContext>();
}

InQuIRParser::ParticipantContext* InQuIRParser::FunctionContext::participant(size_t i) {
  return getRuleContext<InQuIRParser::ParticipantContext>(i);
}

tree::TerminalNode* InQuIRParser::FunctionContext::RBRACK() {
  return getToken(InQuIRParser::RBRACK, 0);
}

std::vector<tree::TerminalNode *> InQuIRParser::FunctionContext::COMMA() {
  return getTokens(InQuIRParser::COMMA);
}

tree::TerminalNode* InQuIRParser::FunctionContext::COMMA(size_t i) {
  return getToken(InQuIRParser::COMMA, i);
}

tree::TerminalNode* InQuIRParser::FunctionContext::CLOSE() {
  return getToken(InQuIRParser::CLOSE, 0);
}

std::vector<InQuIRParser::ValueContext *> InQuIRParser::FunctionContext::value() {
  return getRuleContexts<InQuIRParser::ValueContext>();
}

InQuIRParser::ValueContext* InQuIRParser::FunctionContext::value(size_t i) {
  return getRuleContext<InQuIRParser::ValueContext>(i);
}

tree::TerminalNode* InQuIRParser::FunctionContext::INIT() {
  return getToken(InQuIRParser::INIT, 0);
}

std::vector<tree::TerminalNode *> InQuIRParser::FunctionContext::LPAREN() {
  return getTokens(InQuIRParser::LPAREN);
}

tree::TerminalNode* InQuIRParser::FunctionContext::LPAREN(size_t i) {
  return getToken(InQuIRParser::LPAREN, i);
}

std::vector<tree::TerminalNode *> InQuIRParser::FunctionContext::RPAREN() {
  return getTokens(InQuIRParser::RPAREN);
}

tree::TerminalNode* InQuIRParser::FunctionContext::RPAREN(size_t i) {
  return getToken(InQuIRParser::RPAREN, i);
}

tree::TerminalNode* InQuIRParser::FunctionContext::FREE() {
  return getToken(InQuIRParser::FREE, 0);
}

tree::TerminalNode* InQuIRParser::FunctionContext::MEASURE() {
  return getToken(InQuIRParser::MEASURE, 0);
}

InQuIRParser::QubitContext* InQuIRParser::FunctionContext::qubit() {
  return getRuleContext<InQuIRParser::QubitContext>(0);
}

tree::TerminalNode* InQuIRParser::FunctionContext::GENENT() {
  return getToken(InQuIRParser::GENENT, 0);
}

InQuIRParser::LabelContext* InQuIRParser::FunctionContext::label() {
  return getRuleContext<InQuIRParser::LabelContext>(0);
}

tree::TerminalNode* InQuIRParser::FunctionContext::ENTSWAP() {
  return getToken(InQuIRParser::ENTSWAP, 0);
}

std::vector<InQuIRParser::ExpressionContext *> InQuIRParser::FunctionContext::expression() {
  return getRuleContexts<InQuIRParser::ExpressionContext>();
}

InQuIRParser::ExpressionContext* InQuIRParser::FunctionContext::expression(size_t i) {
  return getRuleContext<InQuIRParser::ExpressionContext>(i);
}

tree::TerminalNode* InQuIRParser::FunctionContext::RECV() {
  return getToken(InQuIRParser::RECV, 0);
}

tree::TerminalNode* InQuIRParser::FunctionContext::COLON() {
  return getToken(InQuIRParser::COLON, 0);
}

tree::TerminalNode* InQuIRParser::FunctionContext::SEND() {
  return getToken(InQuIRParser::SEND, 0);
}

tree::TerminalNode* InQuIRParser::FunctionContext::RCXC() {
  return getToken(InQuIRParser::RCXC, 0);
}

tree::TerminalNode* InQuIRParser::FunctionContext::RCXT() {
  return getToken(InQuIRParser::RCXT, 0);
}


size_t InQuIRParser::FunctionContext::getRuleIndex() const {
  return InQuIRParser::RuleFunction;
}

void InQuIRParser::FunctionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<InQuIRParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunction(this);
}

void InQuIRParser::FunctionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<InQuIRParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunction(this);
}

InQuIRParser::FunctionContext* InQuIRParser::function() {
  FunctionContext *_localctx = _tracker.createInstance<FunctionContext>(_ctx, getState());
  enterRule(_localctx, 8, InQuIRParser::RuleFunction);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(196);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(95);
      session();
      setState(96);
      match(InQuIRParser::EQUAL);
      setState(97);
      match(InQuIRParser::OPEN);
      setState(98);
      match(InQuIRParser::LBRACK);
      setState(99);
      participant();
      setState(104);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == InQuIRParser::COMMA) {
        setState(100);
        match(InQuIRParser::COMMA);
        setState(101);
        participant();
        setState(106);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(107);
      match(InQuIRParser::RBRACK);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(109);
      match(InQuIRParser::CLOSE);

      setState(110);
      session();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(111);
      value();
      setState(112);
      match(InQuIRParser::EQUAL);
      setState(113);
      match(InQuIRParser::INIT);
      setState(114);
      match(InQuIRParser::LPAREN);
      setState(115);
      match(InQuIRParser::RPAREN);
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(117);
      match(InQuIRParser::FREE);
      setState(118);
      value();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(119);
      value();
      setState(120);
      match(InQuIRParser::EQUAL);
      setState(121);
      match(InQuIRParser::MEASURE);
      setState(122);
      qubit();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(124);
      value();
      setState(125);
      match(InQuIRParser::EQUAL);
      setState(126);
      match(InQuIRParser::GENENT);
      setState(127);
      match(InQuIRParser::LBRACK);
      setState(128);
      participant();
      setState(129);
      match(InQuIRParser::RBRACK);
      setState(130);
      match(InQuIRParser::LPAREN);
      setState(131);
      label();
      setState(132);
      match(InQuIRParser::RPAREN);
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(134);
      match(InQuIRParser::LPAREN);
      setState(135);
      value();
      setState(136);
      match(InQuIRParser::COMMA);
      setState(137);
      value();
      setState(138);
      match(InQuIRParser::RPAREN);
      setState(139);
      match(InQuIRParser::EQUAL);
      setState(140);
      match(InQuIRParser::ENTSWAP);
      setState(141);
      match(InQuIRParser::LPAREN);
      setState(142);
      expression(0);
      setState(143);
      match(InQuIRParser::COMMA);
      setState(144);
      expression(0);
      setState(145);
      match(InQuIRParser::RPAREN);
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(147);
      match(InQuIRParser::RECV);
      setState(148);
      match(InQuIRParser::LPAREN);
      setState(149);
      session();
      setState(150);
      match(InQuIRParser::COMMA);
      setState(151);
      label();
      setState(152);
      match(InQuIRParser::COLON);
      setState(153);
      value();
      setState(154);
      match(InQuIRParser::RPAREN);
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(156);
      match(InQuIRParser::SEND);
      setState(157);
      match(InQuIRParser::LBRACK);
      setState(158);
      participant();
      setState(159);
      match(InQuIRParser::RBRACK);
      setState(160);
      match(InQuIRParser::LPAREN);
      setState(161);
      session();
      setState(162);
      match(InQuIRParser::COMMA);
      setState(163);
      label();
      setState(164);
      match(InQuIRParser::COLON);
      setState(165);
      value();
      setState(166);
      match(InQuIRParser::RPAREN);
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(168);
      match(InQuIRParser::RCXC);
      setState(169);
      match(InQuIRParser::LBRACK);
      setState(170);
      participant();
      setState(171);
      match(InQuIRParser::RBRACK);
      setState(172);
      match(InQuIRParser::LPAREN);
      setState(173);
      session();
      setState(174);
      match(InQuIRParser::COMMA);
      setState(175);
      label();
      setState(176);
      match(InQuIRParser::COMMA);
      setState(177);
      expression(0);
      setState(178);
      match(InQuIRParser::COMMA);
      setState(179);
      expression(0);
      setState(180);
      match(InQuIRParser::RPAREN);
      break;
    }

    case 11: {
      enterOuterAlt(_localctx, 11);
      setState(182);
      match(InQuIRParser::RCXT);
      setState(183);
      match(InQuIRParser::LBRACK);
      setState(184);
      participant();
      setState(185);
      match(InQuIRParser::RBRACK);
      setState(186);
      match(InQuIRParser::LPAREN);
      setState(187);
      session();
      setState(188);
      match(InQuIRParser::COMMA);
      setState(189);
      label();
      setState(190);
      match(InQuIRParser::COMMA);
      setState(191);
      expression(0);
      setState(192);
      match(InQuIRParser::COMMA);
      setState(193);
      expression(0);
      setState(194);
      match(InQuIRParser::RPAREN);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Quantum_instructionContext ------------------------------------------------------------------

InQuIRParser::Quantum_instructionContext::Quantum_instructionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

InQuIRParser::GateContext* InQuIRParser::Quantum_instructionContext::gate() {
  return getRuleContext<InQuIRParser::GateContext>(0);
}

std::vector<InQuIRParser::QubitContext *> InQuIRParser::Quantum_instructionContext::qubit() {
  return getRuleContexts<InQuIRParser::QubitContext>();
}

InQuIRParser::QubitContext* InQuIRParser::Quantum_instructionContext::qubit(size_t i) {
  return getRuleContext<InQuIRParser::QubitContext>(i);
}

tree::TerminalNode* InQuIRParser::Quantum_instructionContext::LBRACK() {
  return getToken(InQuIRParser::LBRACK, 0);
}

InQuIRParser::ValueContext* InQuIRParser::Quantum_instructionContext::value() {
  return getRuleContext<InQuIRParser::ValueContext>(0);
}

tree::TerminalNode* InQuIRParser::Quantum_instructionContext::RBRACK() {
  return getToken(InQuIRParser::RBRACK, 0);
}


size_t InQuIRParser::Quantum_instructionContext::getRuleIndex() const {
  return InQuIRParser::RuleQuantum_instruction;
}

void InQuIRParser::Quantum_instructionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<InQuIRParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQuantum_instruction(this);
}

void InQuIRParser::Quantum_instructionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<InQuIRParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQuantum_instruction(this);
}

InQuIRParser::Quantum_instructionContext* InQuIRParser::quantum_instruction() {
  Quantum_instructionContext *_localctx = _tracker.createInstance<Quantum_instructionContext>(_ctx, getState());
  enterRule(_localctx, 10, InQuIRParser::RuleQuantum_instruction);
  size_t _la = 0;
